Add custom configuration file support

--- a/package.json
+++ b/package.json
@@ -1,36 +1,20 @@
 {
   "name": "csscomb-loader",
-  "version": "0.0.1",
-  "description": "CSSComb loader for webpack",
-  "main": "index.js",
-  "author": "Konstantin Tarkus <hello@tarkus.me>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/koistya/csscomb-loader"
-  },
+  "version": "0.0.2",
+  "description": "CSScomb loader for webpack",
+  "keywords": ["webpack", "loader", "csscomb", "css", "sass", "scss", "less"],
   "bugs": {
     "url": "https://github.com/koistya/csscomb-loader/issues"
   },
+  "license": "MIT",
+  "author": "Konstantin Tarkus <hello@tarkus.me>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/koistya/csscomb-loader.git"
+  },
+  "main": "index.js",
   "dependencies": {
     "csscomb": "^3.0.0",
     "loader-utils": "^0.2.5"
-  },
-  "devDependencies": {
-  },
-  "keywords": [
-    "webpack",
-    "loader",
-    "csscomb",
-    "css",
-    "sass",
-    "scss",
-    "less"
-  ],
-  "files": [
-    "index.js"
-  ],
-  "scripts": {
-    "test": "gulp"
   }
 }
